# eitprocessing

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .editorconfig  .gitignore  .mlc-config.json  .prospector.yml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  developers.html  environment.yml  genindex.html  index.html  mkdocs.yml  next_steps.md  objects.inv  project_setup.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sonar-project.properties  versions.json
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  coverage.yml  coveralls.yml  dash_actions.yml  dashboard.yml  documentation.yml  lint.yml  next_steps.yml  prepare_test_data.yml  read_workflows.yml  release.yml  release_github.yml  release_github2.yml  release_pypi.yml  test_build_documentation.yml  testing.yml  testing_uv.yml
.helpers/: Dockerfile
APIindex/: index.html
_build/coverage/: python.txt  undoc.pickle
_build/doctrees/: developers.doctree  index.doctree
_build/html/: developers.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_modules/: animate.html  eitprocessing.html  event.html  index.html  phases.html  plot.html
_modules/eitprocessing/: categories.html  continuous_data.html  continuousdata.html  data_collection.html  datacollection.html  datahandling.html  eit_data.html  eitdata.html  event.html  filters.html  helper.html  loading.html  parameters.html  phases.html  roi_selection.html  sequence.html  sparse_data.html  sparsedata.html  variants.html
_sources/: developers.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
api/categories/: index.html
api/datacontainers/: index.html
api/features/: index.html
api/filters/: index.html
api/loading/: index.html
api/mixins/: index.html
api/parameters/: index.html
autoapi/: index.html
autoapi/animate/: index.html
autoapi/eitprocessing/: index.html
autoapi/event/: index.html
autoapi/phases/: index.html
autoapi/plot/: index.html
basic_example/: index.html
code_of_conduct_doc/: index.html
contributing_doc/: index.html
css/: material.css
docs/: APIindex.md  Makefile  code_of_conduct_doc.md  conf.py  contributing_doc.md  index.md  index.rst  installation.md  license_doc.md  make.bat  team.md
docs/api/: categories.md  datacontainers.md  features.md  filters.md  loading.md  mixins.md  parameters.md
docs/css/: material.css
eitprocessing/: __init__.py  categories.py  datacollection.py  eitdata.py  helper.py  mixins.py  my_module.py  sequence.py
eitprocessing/binreader/: __init__.py  event.py  frameset.py  phases.py  reader.py  sequence.py  timing_error.py
eitprocessing/config/: __init__.py  categories-compact.yaml
eitprocessing/continuous_data/: __init__.py  continuous_data_collection.py  continuous_data_variant.py
eitprocessing/data_collection/: __init__.py
eitprocessing/datacollection/: __init__.py  sparsedata.py
eitprocessing/datahandling/: __init__.py  breath.py  continuousdata.py  datacollection.py  eitdata.py  event.py  intervaldata.py  pixelmap.py  sequence.py  sparsedata.py
eitprocessing/eit_data/: __init__.py  draeger.py  eit_data_variant.py  event.py  loading.py  phases.py  sentec.py  timpel.py  vendor.py
eitprocessing/eitbinary/: __init__.py  sequence.py
eitprocessing/features/: breath_detection.py  detect_respiratory_heart_rate.py  moving_average.py  pixel_breath.py  pixel_inflation.py  rate_detection.py
eitprocessing/filters/: __init__.py  butterworth_filters.py  emd.py  mdn.py  mdn_filter.py  modwt.py
eitprocessing/loading/: __init__.py  draeger.py  sentec.py  timpel.py
eitprocessing/mixins/: addition.py  equality.py  slicing.py  test_eq.ipynb  test_slicing.ipynb
eitprocessing/objects/: datacollection.py  eitdata.py  sequence.py
eitprocessing/parameters/: __init__.py  _temp_class.py  center_of_ventilation.py  eeli.py  global_inhomogeneity.py  inhomogeneity_index.py  regional_ventilation_delay.py  respiratory_durations.py  tidal_impedance_variation.py
eitprocessing/plotting/: __init__.py  animate.py  filter.py  helpers.py  pixelmap.py  pixelmap_plotting.py  plot.py  rate_detection.py
eitprocessing/roi/: __init__.py  amplitude.py  filter_by_size.py  pixelmaskcollection.py  roi_labeller.py  roi_selector.py  roi_size_filter.py  tiv.py  watershed.py
installation/: index.html
license_doc/: index.html
notebooks/: eitbinary.ipynb  find_grid.ipynb  lung_segmentation_figure.ipynb  minidemo.ipynb  physiological_roi.ipynb  synthetic_data_maker.ipynb  test_EELI.py  test_gi.ipynb  test_load_partial.ipynb  test_merge_timpel.ipynb  test_parameter_eeli_.ipynb  test_parameter_tiv.ipynb  test_parameters_.ipynb  test_pixel_breath.ipynb  test_pixel_inflation.ipynb  test_pixelmap_imshow.ipynb  test_plot_filter_results.ipynb  test_ratedetection.ipynb  test_sentec.py
notes/: refactor_proposal.html  refactor_proposal.qmd
paper/: paper.bib  paper.md  references.bib
search/: search_index.json
team/: index.html
tests/: conftest.py  test_amplitude_lungspace.py  test_breath_detection.py  test_butterworth_filter.py  test_categories.py  test_continuous_data.py  test_datacollection.py  test_eeli.py  test_eit_data_variant.py  test_eitdata.py  test_gridselection.py  test_intervaldata.py  test_labels.py  test_loading.py  test_locking.py  test_mdn_filter.py  test_my_module.py  test_parameter_tiv.py  test_pixel_breath.py  test_pixel_inflation.py  test_pixelmap.py  test_pixelmask.py  test_pixelmask_collection.py  test_rate_detection.py  test_roi_selector.py  test_roi_size_filter.py  test_sequence.py  test_sequence_data.py  test_sparsedata.py  test_timpel_sequence.py  test_tiv_lungspace.py  test_variant.py  test_variant_collection.py  test_watershed.py
v1.6/: 404.html  index.html  objects.inv
v1.7/: objects.inv
v1.8/: 404.html  index.html  objects.inv
v1.8.0/: index.html  objects.inv
(+536 files in other folders)
