# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Dani Bodor
author_email = d.bodor@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Processing of lung image data from electrical impedance tomography
keywords:
  - Mechanical lung ventilation
  - Electrical impedance tomography
  - Image/data processing
  - Advanced respiratory care
long_description = file: README.md
long_description_content_type = text/markdown
name = eitprocessing
project_urls =
    Bug Tracker = git@github.com:EIT-ALIVE/eitprocessing/issues
url = git@github.com:EIT-ALIVE/eitprocessing
version = 0.1.0

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
    flit >= 3.8.0
    ipykernel >= 6.15.2
    ipython >= 8.4.0
    jupyter >= 1.0.0
    jupytext >= 1.14.5
    matplotlib >= 3.7.1
    notebook >= 6.4.12
    numpy >= 1.24.2
    scipy >= 1.10.1
    tqdm >= 4.65.0

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = eitprocessing, eitprocessing.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = eitprocessing
src_paths = eitprocessing,tests
line_length = 120
